// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UI Input > renders correctly 1`] = `
<div>
  <form
    class="_container_db8317"
  >
    <svg
      class="_icon_db8317"
      data-testid="arrow-down"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m12 15.4l-6-6L7.4 8l4.6 4.6L16.6 8L18 9.4l-6 6Z"
        fill="gray"
      />
    </svg>
    <input
      type="text"
    />
  </form>
</div>
`;

exports[`renders correctly 1`] = `
<div>
  <form
    class="_container_db8317"
    data-testid="input-form"
  >
    <svg
      class="_icon_db8317"
      data-testid="arrow-down"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m12 15.4l-6-6L7.4 8l4.6 4.6L16.6 8L18 9.4l-6 6Z"
        fill="gray"
      />
    </svg>
    <input
      type="text"
    />
  </form>
</div>
`;
